app/css/base.css
/* ... */
/* Layout */
.sb-sidenav .sb-sidenav-menu .nav .nav-link {
  padding-top: 0.6rem;
  padding-bottom: 0.6rem;
  font-size: 16px;
}
.sidebar .nav-item .nav-link {
  padding: 0.6rem 0.6rem 0.6rem 1.0rem;
}

.sidebar.toggled .nav-item .nav-link span {
  display: none;
}
.sidebar .nav-item .nav-link i,
.sidebar .nav-item .nav-link span {
    font-size: 1.0rem;
}

.sb-sidenav .sb-nav-link-icon.active .nav-link {
  font-weight: bolder;
  color: var(--raspap-brand-color);
}
.sb-sidenav .sb-nav-link-icon.active i.sb-nav-link-icon {
  color: var(--raspap-brand-color);
}

.sidebar-brand-text {
  text-transform: none;
  font-size: 2.0rem;
  font-weight: 500;
  font-family: Helvetica, Arial, sans-serif;
}

.h-underlined {
  border-bottom: 1px solid #e3e6f0;
  padding-bottom: 0.3rem;
}

.navbar-logo {
  margin-top: 0.2em;
  margin-left: 0.7em;
}

#navbar-system-mode {
  color: var(--raspap-text-muted);
}
#navbar-system-mode.active {
  color: var(--raspap-brand-color);
}

.login-logo {
  width: 70px;
  height: 70px;
  margin-left: 1.2rem;
  margin-bottom: -0.5rem;
}

.nav-item {
  font-size: 0.85rem;
}

.nav-user {
  position: relative;
  bottom: 11px;
  right: 3px;
}

.topbar-avatar {
  width: 38.4px!important;
  height: 38.4px!important;
}
@media (min-width: 641px) {
  .topbar-avatar {
    width: 48px!important;
    height: 48px!important;
  }
}

.page-header {
  font-size: 26pt;
  margin: 20px 0 20px;
}

.close {
  font-weight: 400;
  font-size: 1.3rem;
}

/* --- Page Specific --- */
.nav-tabs-wrapper {
  width: 100%;
  overflow-x: auto;
}
.nav-tabs-wrapper::-webkit-scrollbar {
  display: none;
}
.nav-tabs-wrapper > .nav-tabs {
  flex-wrap: nowrap;
  min-width: 100%;
  width: min-content;
}
.nav-tabs .nav-link.active,
.nav-tabs .nav-link {
  font-size: 1.0rem;
}
.nav-tabs a.nav-link {
  color: #6e707e;
  white-space: nowrap;
}

/* Service Status */
.service-status {
  border-width: 0;
  align-items: center;
}

.service-status-up {
  color: #a1ec38 !important;
}

.service-status-warn {
  color: #ffbf00 !important;
}

.service-status-down {
  color: #f80107 !important;
}

.led-pulse {
  opacity: 0.3 !important;
}

.hostapd-led {
  color: #28a745;
  opacity: 1;
  transition: opacity 0.05s;
}

.sb-status {
  margin-left: 0.75rem!important;
}

/* Login */
#modal-admin-login .modal-content {
  background: radial-gradient(circle at 120% -20%, #032626, #052c2c, #073232, #0a3838, #0d3f3f, #114545, #144c4c);
  align-items: center;
}

#modal-admin-login .modal-body {
  min-width: 330px;
}

.login-brand {
  color: var(--raspap-brand-color);
  filter: brightness(150%);
}

.admin-login {
  color: var(--raspap-offwhite);
  font-size: 1.2em
}

.btn-admin-login {
  color: var(--raspap-offwhite);
  background-color: var(--raspap-brand-color);
}

.btn-admin-login:hover {
  color: var(--raspap-offwhite);
  background-color: #236969;
}

.no-right-radius {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.btn-passwd-append {
  border: 1px solid #ced4da;
}

/* Dashboard */
.dashboard-container {
  display: flex;
  position: relative;
  width: 100%;
  max-width: 1230px;
  min-height: 400px;
  padding: 2rem;
  margin: 0 auto;
}

/* Dashboard -- Connections */
.connections-left,
.connections-right {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.connection-item {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  z-index: 5;
}

.connection-item .fa-stack {
  min-width: 2.5em;
}

.connections-left > .connection-item > span {
  margin-right: 0.5rem;
}

.connection-right {
  align-items: center;
  margin-left: 10rem;
}

.connections-left i {
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: left;
}

.connections-left i:first-child {
  margin-top: 0;
}

.connections-left i:last-child {
  margin-bottom: 0;
  margin-left: 0.5rem;
}

.connection-item.active > span {
  color: var(--bs-primary) !important;
}
.connection-item.active > i {
  color: var(--bs-primary) !important;
}

.center-device {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  position: relative;
  z-index: 10;
}

.center-device-top {
  margin-bottom: 30px;
}

.ip-info-toggle {
  display: inline-block;
  background: #e3e3e3;
  padding: 0.29rem;
  border-radius: 0.375rem;
  font-size: 0.8rem;
}
.ip-info-toggle button {
  padding: 0.1rem 0.75rem;
  border-radius: 0.275rem;
  transition: background 0.15s linear;
  background: transparent;
  font-weight: 600;
  color: var(--raspap-brand-color);
  border: none;
}
.ip-info-toggle button.active {
  background: var(--raspap-brand-color);
  color: white;
}

.client-group {
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
  gap: 0.5rem;
}

.client-count {
  text-align: right;
}

.clients-status {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-end;
  padding-right: 1rem;
}

.dashed-lines,
.solid-lines {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  padding: 1rem;
  left: 112px;
}

.dashed-lines-right,
.solid-lines-right {
  left: -80px;
}

.solid-lines, .solid-lines-right {
  z-index: 3;
}

.dashed-lines, .dashed-lines-right {
  z-index: 0;
}

.device-status {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: center;
  margin: 0.8rem 0;
}

.wifi-bands {
  display: flex;
  gap: 0.5rem;
}

.band {
  padding: 0.25rem 1rem;
  border: 2px solid var(--raspap-text-light);
  border-radius: 4px;
  background: transparent;
  font-weight: 600;
  color: var(--raspap-text-light);
}

.band.active {
  border-color: var(--bs-primary);
  color: var(--bs-primary);
}

.device-label {
  font-size: 1.3rem;
  text-align: center;
  margin-top: 1rem;
}

.bottom {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.3rem;
  width: 100%;
}
/* ... */

